[package]
name = "cu-example"
version = "0.1.0"
edition = "2021"

[dependencies]
dashmap = { version = "5.4" }
tokio = { version = "1.27", features = ["full"] }
tracing = { version = "0.1" }
cu-core = { path = "../cu-core" }

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
cu-macros = { path = "../cu-macros", default-features = false }
