[package]
name = "meter-example"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
dashmap = { version = "5.4" }
tokio = { version = "1.27", features = ["full"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

meter-core = { path = "../meter-core" }
meter-macros = { path = "../meter-macros", default-features = false }
