[package]
name = "meter-example"
version = "0.1.0"
edition = "2021"

[dependencies]
dashmap = { version = "5.4" }
tokio = { version = "1.27", features = ["full"] }
tracing = { version = "0.1" }
meter-core = { path = "../meter-core" }

[dev-dependencies]
meter-macros = { path = "../meter-macros", default-features = false }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
